Setup | basically a code dump :)

--- a/playground/.gitignore
+++ b/playground/.gitignore
@@ -1,3 +1,6 @@
+# Packem
+/build-packem
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -21,9 +24,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Neon
-native/target
-native/index.node
-native/artifacts.json
-**/*~
