--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./index.js",
   "bin": "./scripts/cli.js",
   "scripts": {
-    "install": "node-pre-gyp install --update-binary --fallback-to-build=false || echo null",
+    "install": "npm run build",
     "build": "node ./scripts/build.js",
     "package": "node-pre-gyp package",
     "upload-binary": "node-pre-gyp package && node-pre-gyp-github publish --release"
