Build script fix

--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   },
   "homepage": "https://github.com/packem/packem#readme",
   "dependencies": {
-    "@amilajack/node-pre-gyp": "github:amilajack/node-pre-gyp#neon-compat",
     "@babel/core": "^7.2.2",
+    "@octokit/rest": "^16.25.0",
     "chalk": "^2.4.2",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.1",
     "node-abi": "^2.7.1",
-    "node-fetch": "^2.3.0",
+    "node-pre-gyp": "^0.12.0",
     "node-pre-gyp-github": "^1.4.3",
     "ora": "^3.4.0",
     "worker-farm": "^1.6.0",
