--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "packem",
   "version": "0.1.4",
   "description": "",
-  "main": "./index.js",
+  "main": "./src/index.js",
   "bin": "./scripts/cli.js",
   "scripts": {
     "install": "npm run build",
