--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "install": "npm run build",
     "build": "node ./scripts/build.js",
     "package": "node-pre-gyp package",
-    "upload-binary": "node-pre-gyp package && node-pre-gyp-github publish --release"
+    "upload-binary": "node-pre-gyp package && node-pre-gyp-github publish --release",
+    "postinstall": "opencollective-postinstall || true"
   },
   "binary": {
     "module_name": "index",
@@ -51,10 +52,15 @@
     "chalk": "^2.4.2",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.1",
+    "make-dir": "^3.0.0",
     "node-abi": "^2.7.1",
     "node-pre-gyp": "^0.12.0",
     "node-pre-gyp-github": "^1.4.3",
-    "make-dir": "^3.0.0",
+    "opencollective-postinstall": "^2.0.2",
     "tar": "^4.4.8"
+  },
+  "collective": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/packem"
   }
 }
